--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -34,14 +34,8 @@
         <button type="submit" class="btn btn-custom">Go</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a href="#">
-            <i class="fa fa-shopping-cart" aria-hidden="true"></i> Ticket Cart
-            <span class="badge"></span>
-          </a>
-        </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> User Management<span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i> Profile<span class="caret"></span></a>
           <ul class="dropdown-menu">
             {{# if login }}
               <li><a href="/user/profile">User Account</a></li>
